# wsh-shell

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  .markdownlint.json  .pre-commit-config.yaml  404.html  CMakeLists.txt  CMakePresets.json  ChangeLog.md  KNOWN_ISSUES.md  Makefile  README.md  mkdocs.yml  requirements.txt
Wsh_Shell_API/class_member_enums/: index.html
Wsh_Shell_API/classes/: index.html
Wsh_Shell_API/files/: index.html
Wsh_Shell_API/hierarchy/: index.html
Wsh_Shell_API/macros/: index.html
Wsh_Shell_API/modules/: index.html
Wsh_Shell_API/namespace_member_enums/: index.html
Wsh_Shell_API/namespace_member_functions/: index.html
Wsh_Shell_API/namespace_members/: index.html
Wsh_Shell_API/namespaces/: index.html
Wsh_Shell_API/structWshShellEsc__Action__t/: index.html
Wsh_Shell_API/structWshShellEsc__Storage__t/: index.html
Wsh_Shell_API/structWshShellHistory__Data__t/: index.html
Wsh_Shell_API/structWshShellHistory__t/: index.html
Wsh_Shell_API/structWshShellOption__t/: index.html
Wsh_Shell_API/structWshShellUser__Table__t/: index.html
dev/: 404.html  index.html
docs/: index.md
example/: Makefile  main.c  shell.c  shell.h
example/basic/: CMakeLists.txt  CMakePresets.json  Makefile  basic.c  main.c  shell.c  shell.h
main/: 404.html  index.html
search/: search_index.json
src/: CMakeLists.txt  wsh_shell.c  wsh_shell.h  wsh_shell_autocomplete.c  wsh_shell_autocomplete.h  wsh_shell_cfg_def.h  wsh_shell_cmd.c  wsh_shell_cmd.h  wsh_shell_cmd_def.c  wsh_shell_cmd_def.h  wsh_shell_esc.c  wsh_shell_esc.h  wsh_shell_history.c  wsh_shell_history.h  wsh_shell_interact.c  wsh_shell_interact.h  wsh_shell_io.c  wsh_shell_io.h  wsh_shell_misc.c  wsh_shell_misc.h  wsh_shell_option.h  wsh_shell_promptwait.c  wsh_shell_promptwait.h  wsh_shell_ps1_custom.c  wsh_shell_ps1_custom.h  wsh_shell_str.c  wsh_shell_str.h  wsh_shell_types.h  wsh_shell_user.c  wsh_shell_user.h  wsh_shell_version.h
test/: test_cmd.c  test_history.c  test_user.c
tests/: README.md  conftest.py  test_wsh_shell_adapter.py  test_wsh_shell_config.py
utils/: code-format.sh  elf-size-analyse.py  gen-pass.py  gen-shell-banner.py  pass-gen.py  shell-banner-gen.py
wsh_shell_adapter/: README.md  __init__.py  adapter.py  config.toml  exceptions.py  raw_adapter.py  requirements.txt  run_local_shell.py  run_usb_shell.py  serial_cli.py  transport.py
(+597 files in other folders)
